--- a/scripts/install
+++ b/scripts/install
@@ -1,7 +1,7 @@
 #!/bin/bash
-aws s3 cp s3://demo-java-app-pipeline/AWS_Code-Pipeline_Tomcat_Build/AWS_Code-Pipeline_Tomcat/LoginWebApp-1.war /tmp
-sudo mv /tmp/LoginWebApp-1.war /home/ec2-user/apache-tomcat-9.0.76/webapps
+aws s3 cp s3://cicdbucketformine/demoproject/LoginWebApp-1.war /tmp
+sudo mv /tmp/LoginWebApp-1.war /home/ec2-user/tomcat/webapps
 
-chmod -R 777 /home/ec2-user/apache-tomcat-9.0.79/webapps/LoginWebApp-1.war
+chmod -R 777 /home/ec2-user/tomcat/webapps/LoginWebApp-1.war
 
-sudo /home/ec2-user/apache-tomcat-9.0.76/bin/startup.sh
+sudo /home/ec2-user/tomcat/bin/startup.sh
